# ShotSieve

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  shotsieve.spec
.github/skills/code-reviewer/: SKILL.md
.github/skills/code-simplifier/: SKILL.md
.github/skills/codex-review/: SKILL.md
.github/skills/test-driven-development/: SKILL.md
.github/workflows/: release.yml
docs/: accessibility-checklist.md  building.md
scripts/: build_portable_bundle.py  build_windows_releases.ps1  create_github_release.ps1  prepare_release.ps1  release-constraints.txt  release_target_matrix.py
src/shotsieve/: __init__.py  bootstrap.py  config.py  db.py  desktop.py  export.py  job_registry.py  learned_iqa.py  learned_iqa_backend.py  learned_iqa_catalog.py  learned_iqa_preprocessing.py  learned_iqa_runtime.py  models.py  preview.py  release_targets.py  review.py  runtime_support.py  scanner.py  schema.py  scoring.py  web.py  web_media.py  web_request.py  web_routes.py  web_security.py
src/shotsieve/static/: app-busy.js  app-events.js  app-review.js  app-state.js  app-utils.js  app-workflows.js  (+6 more)
tests/: conftest.py  test_bootstrap.py  test_desktop.py  test_export.py  test_frontend_accessibility.py  test_frontend_state_reset.py  test_job_registry.py  test_preview.py  test_release_scripts.py  test_review_workflow.py  test_runtime_helpers.py  test_scan_and_schema.py  test_scoring.py  test_web_media.py  test_web_routes.py  test_web_routes_async.py  test_web_routes_integration.py  test_web_security.py  test_web_static_assets.py
(+1 files in other folders)
